# fmi-ai-master-dl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: NNGA.md  settings.json
Documentation/: CLOUD_TRAINING.md  DEMO_SCRIPT.md  LEARNING_PLAN.md  PROJECT_PLAN.md  _MRF Requirements.md
Documentation/Requirements/: BDD.md  MRF.md
Documentation/Studing materials/: notes.md
Documentation/tests/: test_gan.py  test_gan_discriminator.py  test_gan_generator.py  test_main.py  test_rnn.py  test_rnn_cell.py  test_run.py
_NNGA/: PRESENTATION.BG.md  PRESENTATION.md  PRESENTATION.pptx  README.md  pyproject.toml
_NNGA/Documentation/: Course project topics.docx  Intro.pptx
_NNGA/reports/: GA_SYNERGISM_REPORT.md  best_hyperparameters.yaml  tune_results.ndjson
_NNGA/src/: evolve_hyperparameters.py  plot_evolution.py
notebooks/: 01_eda.ipynb
objdetect/: __init__.py  config.py  utils.py  visualization.py
objdetect/app/: __init__.py  inference.py  main.py
objdetect/cli/: __init__.py  benchmark_baselines.py  compare_models_visual.py  download_data.py  evaluate.py  plot_lr_schedules.py  prepare_cone_coco.py  prepare_cone_dataset.py  run_experiments.py  train.py  train_cone_frcnn.py  train_cone_yolo.py
objdetect/data/: __init__.py  coco.py  cone.py
objdetect/eda/: __init__.py  (+2 more)
reports/: EDA_REPORT.md  LITERATURE_REVIEW.md  MODEL_REPORT.md  PRESENTATION.bg.md  PRESENTATION.md  baseline_results.json  cone_frcnn_results.json  cone_yolo_results.json  cone_yolo_results_20ep.json  experiment_results.json
research/: 01_eda.ipynb  EDA_REPORT.md  LITERATURE_REVIEW.md  eda_summary.json
scripts/: benchmark_baselines.py  compare_models_visual.py  download_data.py  evaluate.py  plot_lr_schedules.py  prepare_cone_dataset.py  run_eda.py  run_experiments.py  train.py
tests/: conftest.py  test_eda.py  test_inference.py  test_schedulers.py  test_visualization.py
(+49 files in other folders)
