[project]
name = "objdetect"
version = "0.1.0"
description = "Object detection web app — Deep Learning university course project (Topic 4)"
readme = "README.md"
authors = [
    { name = "Borislav Valkov", email = "bvalkov1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12,<2.13",
    "torchvision>=0.27,<0.28",
    "ultralytics>=8.3",
    "pycocotools>=2.0.8",
    "streamlit>=1.40",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=2.0",
    "pillow>=11.0",
    "requests>=2.32",
]

[project.scripts]
objdetect = "objdetect:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-bdd>=8.1",
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

# Flat layout: the importable `objdetect` package lives at the repo root rather
# than under src/, so the build backend looks for modules at the root.
[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
